--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -27,3 +27,69 @@
     padding-top: 1.2rem;
     margin-left: 0.5rem;
 }
+
+#positive {
+    color: green;
+}
+
+.nav-text {
+    margin-left: 1.5vh;
+    display: flex;
+    justify-content: center; /* Centra los elementos horizontalmente */
+    align-items: center; /* Centra los elementos verticalmente */
+    text-align: center;
+}
+
+#positive {
+    color: green;
+    margin-left: 0.5rem;
+    
+    height: 3rem;
+    width: 3rem;
+}
+
+.tooltip-container {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    padding-top: 1rem;
+    padding-left: 0.5rem;
+  }
+  
+  .tooltip-button {
+    width: 3rem;
+    height: 3rem;
+    border: none;
+    border-radius: 50%;
+    background-color: red;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .tooltip-text {
+    visibility: hidden;
+    width: 30rem;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    margin-top: 1rem;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s;
+    z-index: 9999;
+  }
+  
+  .tooltip-container:hover .tooltip-text,
+  .tooltip-container .tooltip-text.show {
+    visibility: visible;
+    opacity: 1;
+  }
